Minor change on description.

--- a/_config.yml
+++ b/_config.yml
@@ -32,7 +32,7 @@ footer:
 curriculum_vitae_link: https://garciparedes.me/curriculum-vitae
 # cover_letter_link: https://garciparedes.me/cover-letter
 
-description: "Hi everyone! I'm a double Bachelor's degree graduate in Computer Engineering and (future graduate) in Statistics from the University of Valladolid, in Spain. I love to solve complex algorithmic problems, especially those based on Combinatorial Optimization via tricky techniques. Also, I enjoy applying Mathematical and Statistical approaches solving any kind of problem. I'm curious about Natural Language Processing and Sequential Models. Currently, I'm happily working at Unlimiteck Company Builder."
+description: "Hi everyone! I'm a double Bachelor's degree graduate in Computer Engineering and (future graduate) in Statistics from the University of Valladolid, in Spain. I love to solve complex algorithmic problems, especially those based on Combinatorial Optimization via tricky techniques. Also, I enjoy applying Mathematical and Statistical approaches to solve any kind of problem. I'm curious about Natural Language Processing and Sequential Models. Currently, I'm happily working at Unlimiteck Company Builder."
 
 education:
     -   time: 2019 - 2019
