--- a/_config.yml
+++ b/_config.yml
@@ -32,40 +32,49 @@ footer:
 curriculum_vitae_link: https://garciparedes.me/curriculum-vitae
 # cover_letter_link: https://garciparedes.me/cover-letter
 
-description: "Hi everyone! I'm a double Bachelor's degree graduate in Computer Engineering and (future graduate) in Statistics from the University of Valladolid, in Spain. I love to solve complex algorithmic problems, especially those based on Combinatorial Optimization via tricky techniques. Also, I enjoy applying Mathematical and Statistical approaches to solve any kind of problem. I'm curious about Natural Language Processing and Sequential Models. Currently, I'm happily working at Unlimiteck Company Builder."
+description: "Hi everyone! I’m a double Bachelor’s degree graduate in <strong>Computer Engineering</strong> and (future graduate) in <strong>Statistics</strong> from the University of Valladolid, in Spain. I love to solve complex algorithmic problems, especially those based on <strong>Combinatorial Optimization</strong> via tricky techniques. Also, I enjoy applying Mathematical and Statistical approaches to develop amazing solutions. Lately, I’m curious about Sequential Models, Architectural Patterns and the Rust Programming Language. Currently, I’m happily working at <strong>Unlimiteck Company Builder</strong> developing tools to solve complex combinatorial problems."
 
 education:
-    -   time: 2019 - 2019
-        degree: Erasmus+, Statistics.
-        school: <a href="https://www.unibo.it/en" target="_blank">University of Bologna</a>
 
-    -   time: 2017 - 2019
-        degree: Bachelor's degree, Statistics.
-        school: <a href="http://uva.es" target="_blank">University of Valladolid</a>
+    -   time: 2017 - present
+        degree: Statistics
+        level: Bachelor's degree
+        school_name: <a href="http://uva.es" target="_blank">University of Valladolid</a>
+
+    -   time: 2019
+        degree: Statistics
+        level: Erasmus+
+        school_name: <a href="https://www.unibo.it/en" target="_blank">University of Bologna</a>
 
     -   time: 2013 - 2017
-        degree: Bachelor's degree, Computer Engineering, Computation.
-        school: <a href="http://uva.es" target="_blank">University of Valladolid</a>
+        level: Bachelor's degree
+        degree: Computer Engineering, Computation.
+        school_name: <a href="http://uva.es" target="_blank">University of Valladolid</a>
 
 work:
 
-    -   time: 2019/09 - Present
+    -   time: 2018/06 - present
         title: Software Engineer
+        duration: current
         company_name: <a href="https://unlimiteck.com/" target="_blank">Unlimiteck Company Builder</a>
 
-    -   time: 2018/09 - 2019/09
+    -   time:
         title: Remote Software Engineer
-        company_name: <a href="https://unlimiteck.com/" target="_blank">Unlimiteck Company Builder</a>
+        duration: 1 year
+        company_name:
 
-    -   time: 2018/06 - 2018/08
+    -   time:
+        duration: 3 months
         title: Software Engineer Intern
-        company_name: <a href="https://unlimiteck.com/" target="_blank">Unlimiteck Company Builder</a>
+        company_name:
 
     -   time: 2018/03 - 2018/08
+        duration: 6 months
         title: Research Assistant Intern
         company_name: <a href="http://uva.es" target="_blank">University of Valladolid</a>
 
     -   time: 2016/06 - 2016/08
+        duration: 3 months
         title: Software Engineer Intern
         company_name: <a href="https://brooktec.com/" target="_blank">Brooktec</a>
 
@@ -79,8 +88,8 @@ nav-links:
     title: "Work"
   - path: "#education"
     title: "Education"
-  - path: "#portfolio"
-    title: "Portfolio"
+  - path: "#projects"
+    title: "Projects"
 
 # Social networks usernames (many more available: google-plus, flickr, dribbble, pinterest, instagram, tumblr, linkedin, etc.)
 social:
@@ -111,6 +120,6 @@ plugins:
 defaults:
   -
     scope:
-      path:            "portfolio"
+      path:            "project"
     values:
       sitemap:         false
