--- a/_config.yml
+++ b/_config.yml
@@ -2,8 +2,8 @@
 title: Sergio García Prado
 email: sergio@garciparedes.me
 url: https://garciparedes.me
-summary: "Software Engineering | Statistics | RPA | Combinatorial Optimization"
-skills: "Software Engineering | Statistics <br/> RPA | Combinatorial Optimization"
+summary: "Software Engineering | Statistics"
+skills: "Software Engineering | Statistics"
 meta_author: Sergio García Prado
 
 # Google webmaster tools
