--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ color:
 curriculum_vitae_link: https://garciparedes.me/curriculum-vitae
 # cover_letter_link: https://garciparedes.me/cover-letter
 
-description: "Hi everyone! I'm a double Bachelor's degree graduate in <strong>Computer Engineering</strong> and in <strong>Statistics</strong> from the University of Valladolid, in Spain. I love to solve complex algorithmic problems, especially those related with <strong>Combinatorial Optimization</strong>. Also, I enjoy applying Mathematical and Statistical approaches to develop amazing solutions. Lately, I'm especially curious about <strong>Sequential Models</strong>, <strong>Architectural Patterns</strong> and the <strong>Rust Programming Language</strong>. One of my biggest hobbies is <strong>Competitive Programming</strong>, which I try to practice as much as possible."
+description: "I'm a double Bachelor's degree graduate in <strong>Computer Engineering</strong> and in <strong>Statistics</strong> from the University of Valladolid, in Spain. I love to solve complex algorithmic problems, especially those related with <strong>Combinatorial Optimization</strong>. Also, I enjoy applying Mathematical and Statistical approaches to develop amazing solutions."
 
 # Social networks usernames (many more available: google-plus, flickr, dribbble, pinterest, instagram, tumblr, linkedin, etc.)
 social:
